# klaxon-tauri-mcp-proto

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
docs/: architecture.md  mcp-api.md  widget-system.md
scripts/: dev.ps1  dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_new_widgets.sql
src-tauri/src/: alert_store.rs  checkpoint_store.rs  lib.rs  logtail_store.rs  main.rs  mcp_http.rs  models.rs  queue_store.rs  scratchpad_store.rs  settings_store.rs  store.rs  timer_store.rs  token_store.rs  toollog_store.rs
src-tauri/tests/: mcp_http.rs  mcp_http_tests.rs
